--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -2,30 +2,9 @@
 
 <%= form_with(model: product, local: true, novalidate: true, class: "mb-3") do |f| %>
   <!-- Label and input for giver_id start -->
-  <div class="form-group">
-    <% giver_class = "form-control" %>
-    <% giver_was_invalid = product.errors.include?(:giver) %>
-
-    <% if was_validated %>
-      <% if giver_was_invalid %>
-        <% giver_class << " is-invalid" %>
-      <% else %>
-        <% giver_class << " is-valid" %>
-      <% end %>
-    <% end %>
-
-    <%= f.label :giver_id %>
-    <!-- Input for giver_id start -->
-    <%= f.collection_select :giver_id, User.all, :id, :to_s, {}, class: "form-control" %>
-    <!-- Input for giver_id end -->
-    <% if giver_was_invalid %>
-      <% product.errors.full_messages_for(:giver).each do |message| %>
-        <div class="invalid-feedback d-flex">
-          <%= message %>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
+  <!-- Input for "giver_id" start -->
+  <%= f.hidden_field :giver_id, value: current_user.id %>
+  <!-- Input for "giver_id" end -->
   <!-- Label and input for giver_id end -->
   <!-- Label and input for name start -->
   <div class="form-group">
