--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -146,7 +146,7 @@
 
     <%= f.label :gender %>
     <!-- Input for gender start -->
-    <%= f.number_field :gender, class: gender_class, placeholder: "Enter gender" %>
+    <%= f.select :gender, options_for_select(Product.genders.keys), {}, class: "form-control" %>
     <!-- Input for gender end -->
     <% if gender_was_invalid %>
       <% product.errors.full_messages_for(:gender).each do |message| %>
