--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -38,6 +38,10 @@
       <div class="list-group list-group-flush">
         <%= render collection: @products, partial: "list_item", as: :product %>
       </div>
+      <div class="card-footer d-flex justify-content-center">
+        <%= paginate @products, theme: 'twitter-bootstrap-4' %>
+      </div>
+
     </div>
   </div>
 </div>
