--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,3 +4,8 @@
   </div>
 </div>
 
+<div class="row justify-content-center mb-3">
+  <div class="col-md-8">
+    <%= render partial: "products/product_messages" %>
+  </div>
+</div>
