--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,9 @@
             Resources
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a href="/messages" class="dropdown-item">
+              Messages
+            </a>
             <a href="/user_ages" class="dropdown-item">
               User Ages
             </a>
